Porfolio Images Issues resolved

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -507,6 +507,13 @@ section {
 /*--------------------------------------------------------------
 # Portfolio
 --------------------------------------------------------------*/
+.portfolio-image{
+  width: 500px;
+  height: 350px;
+  /* cover imgae */
+  object-fit: cover;
+  
+}
 .portfolio .portfolio-item {
   margin-bottom: 30px;
 
